--- a/.github/workflows/basic.yaml
+++ b/.github/workflows/basic.yaml
@@ -12,11 +12,11 @@ on:
 
 jobs:
   build:
-    runs-on: ubunut-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: checkout code
-        uses: action/checkout@v4
+        uses: actions/checkout@v4
 
       - name: show current directory
         run: pwd
